--- a/projects/user/src/index.html
+++ b/projects/user/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="mat-typography bg-image">
   <app-root></app-root>
-<div class="footer-basic">
+
   <footer class="text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -26,13 +26,13 @@
         <a class="btn btn-outline-light btn-floating m-1" href="mailto:eslamghazi20002@gmail.com" role="button"><i class="fab fa-google"><img src="https://img.icons8.com/color-glass/30/000000/google-logo.png"/></i
         ></a>
        <!-- Copyright -->
-       <div class="text-center" >
+       <div class="text-center text-white" >
         ©
  <script>
    var CurrentYear = new Date().getFullYear();
    document.write(CurrentYear);
  </script>
- Copyright:
+ Developed By:
      <a class="text-white" href="https://www.facebook.com/eslam.ghazi.7/">Ghazi</a>
  </div>
  <!-- Copyright -->
@@ -41,6 +41,6 @@
         </div>
         <!-- Copyright -->
       </footer>
-    </div>
+
 </body>
 </html>
